Fix sidebar overflow clipping during resize

--- a/src/components/sidebar/Sidebar.module.scss
+++ b/src/components/sidebar/Sidebar.module.scss
@@ -16,6 +16,7 @@
     display: flex;
     flex-direction: column;
     height: 100%;
+    overflow: hidden;
     width: 100%;
   }
 
